Feedback for marcel

--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -326,31 +326,31 @@
 	
 	\section{Today's Crowd-Sourcing Methods and GDPR} \label{juxtaposition}
 	\startsection
-		Generally, today's crowd-sourcing methods are GDPR-conform and can still be carried out as before. \\
+		Generally, today's crowd-sourcing methods are GDPR-conform and can still be carried out as before. (Comment PG: Why? We need to have good argumentation for this statement!) \\
 		However, there are some critical and tricky points that need to be considered when a government or service provider wants to use a certain crowd-sourcing method. \\
-		First of all, it must be ensured the "Right to Restriction" and the "Right to Object" must be respected, as there must be an option to prevent the data processing of a certain individual. For example due to the high-quality cameras that are available for tracking purposes, such as traffic flow surveillance, public spaces which are not part of the actual video scanning can be intruded and people which are staying in these spaces can be recognized due to the progress in facial recognition algorithms. \\
+		First of all, it must be ensured that the "Right to Restriction" and the "Right to Object" are respected, as there must be an option to prevent the data processing of a certain individual. For example due to the high-quality cameras that are available for tracking purposes, such as traffic flow surveillance, public spaces which are not part of the actual video scanning can be intruded and people which are staying in these spaces can be recognized due to the progress in facial recognition algorithms. (Comment PG: Limitation: we don't know if there is another law that allows this) \\
 		Other precarious rights are the "Right to Access" and the "Right to Data Portability" such that apps, which were not developed by the government but by individuals, do not grant easy access to the data which were gathered and therefore are not in compliance with GDPR. Additionally, such cases can be very difficult to enforce if the service provider's location is either outside of the European Union or can not be clearly identified. \\
-		For most of the crowd-sourcing methods the "Right to Erasure" can be neglected, because most of these are used to achieve a goal of "public interest" therefore nullifying the associated paragraph.
+		For most of the crowd-sourcing methods the "Right to Erasure" can be neglected, because most of these are used to achieve a goal of public interest therefore nullifying the associated paragraph.
 	\closesection
 	
 	\section{Guidelines and Design Principles}
 	\startsection
-		The very first thing to mention is that GDPR is only considering personal data, hence anonymized data is out of scope regarding the regulations. Therefore, when using data in use-cases where it does not matter who this data belongs to, it should be anonymized in order to rule out possible conflicts with GDPR. \\
-		A very important point when developing crowd-sourcing methods is the handling of consent. It must be given before gathering any data of the data subject, which also must be fully informed of what data is collected and for what purposes. It is not allowed to inline the consent giving in the terms of condition but it must be a separate paragraph which can be individually approven or neglected. The choice must not have any negative consequences as loss of services for instance. If the consent consists of several parts, like the data that is collected, it should be made adjustable such that a full control of what is congregated is given to the user. If a user does revoke his/her given consent the data collection must stop immediately, the already gathered data must be deleted and processing it is prohibited. However already processed data can still be used for information seeking. \\
+		GDPR is a regulation for processing of personal data. Since anonymized data does not contain personal information, it is not personal data. Therefore, when using data in use-cases where it does not matter who this data belongs to, it should be anonymized in order to rule out possible conflicts with GDPR. \\
+		An important consideration when developing crowd-sourcing methods is the handling of consent. It must be given before gathering any data of the data subject, which also must be fully informed of what data is collected and for what purposes. It is not allowed to inline the consent giving in some other legal document, e.g. the terms and conditions, but it must be a separate paragraph which can be individually approven or neglected. The choice must not have any negative consequences as loss of services for instance. If the consent consists of several parts, like the data that is collected, it should be made adjustable such that a full control of what is congregated is given to the user. If a user does revoke his/her given consent the data collection must stop immediately, the already gathered data must be deleted and processing it is prohibited. However already processed data can still be used for information seeking. \\
 		In order to directly comply with the rights of a data subject stated in GDPR the following guidelines must be considered:
 		\begin{enumerate}[(a)]
 			\item All data that is gathered and processed must be accessible by the user and can be handed out when requested.
-			\item Restriction and Objection of data processing must be made possible.
-			\item If the crowd-sourcing method is not used to achieve a goal of public interest the data must be deleted on request and its processing must be prohibited.
+			\item Restriction and Objection of data processing must be possible.
+			\item If the crowd-sourcing method is not used to achieve a goal of public interest the data must be deleted on request and its processing must be stopped.
 		\end{enumerate}
-		Following are some design principles and solutions for certain conflicts that were stated before: \\	
+		Following are some design principles and solutions for well defined conflicts that were stated before: \\	
 		As mentioned in section \ref{juxtaposition} when using cameras in order to surveil certain places, like traffic flow observations, public spaces should be intruded as little as possible by either replacing or reinstalling the camera or by using a blur zone filter, as described in the paper "GDPR Compliance in Video Surveillance and Video Processing Application" \cite{GDPRandSurveillanceCameras}, in order to make some parts of the field of view unidentifiable. \\
-		The gathering of GPS data in realtime can be critical as already stated in the subsection \ref{PrivacyMCS}. If the realtime aspect of the gathering is not of much use, the approach of Apple presented in their paper "Learning with Privacy at Scale" \cite{PrivacyApple} can be used with which the data is sent independent from the timeframe the data was generated. The data is stored on the device which created it and at an arbitrary point in time it is actually sent to the provider of the application or service that wants to use this data, therefore detaching the realtime aspect and make it somewhat impossible to trace back the point in time of when the data was produced. \\
-		For services and application where realtime is also a relevant information to be processed as the energy and water consumption in smart homes, for example in the Schoonschipp project in Amsterdam (subsection \ref{Schoonschipp}), whose smart grid system relies on that data, the General Data Protection Regulation can be a really hard to implement directive, because the inhabitants are "transparent human beings" as the data from the homes is publicly known. Therefore the consent part of GDPR is significant such that the inhabitant are well informed and authorize the service provider to use that data, hence making GDPR somewhat redundant and unnecessary in such cases.
+		The gathering of GPS data in realtime can be critical as already stated in the subsection \ref{PrivacyMCS}. If the realtime aspect of the gathering is not required, the approach of Apple presented in their paper "Learning with Privacy at Scale" \cite{PrivacyApple} can be used with which the data is sent independent from the timeframe the data was generated. The data is stored on the device which created it and at an arbitrary point in time it is actually sent to the provider of the application or service that wants to use this data, therefore detaching the realtime aspect and make it impossible to trace back the point in time of when the data was produced. \\
+		For services and application where realtime is relevant, as the energy and water consumption in smart homes, for example in the Schoonschipp project in Amsterdam (subsection \ref{Schoonschipp}), whose smart grid system relies on that data, the General Data Protection Regulation can be a hard to implement directive, because the inhabitants are "transparent human beings" as the data from the homes is publicly known. Therefore the consent part of GDPR is significant such that the inhabitant are well informed and authorize the service provider to use that data, hence making GDPR redundant and unnecessary in such cases (Comment PG: How is GDPR unnecessary just because you gather consent?).
 	\closesection
 	
 	\hfill \\
-	\noindent The idea of GDPR is to give users back the power over their own information and data and decide when it is used. Also because the use of data has become highly technical, obscure and unpredictable the concepts of consent which are the underlying base of the privacy rights are not meaningful as tracking the data in the world wide web and other services is very difficult. Another idea emerged in 2018 in the paper "A Blueprint for a Better Digital Society" by Jaron Lanier and E. Glen Weyl of "Data Dignity":
+	\noindent The idea of GDPR is to give users back the power over their own information and data and decide when it is used. Also because the use of data has become highly technical, obscure and unpredictable the concepts of consent which are the underlying base of the privacy rights are not meaningful as tracking the data in the world wide web and other services is very difficult (Comment PG: i don't see how consent is not meaningful, event though it might be complicated to controll...). Another approach was proposed in 2018 in the paper "A Blueprint for a Better Digital Society" by Jaron Lanier and E. Glen Weyl of "Data Dignity":
 	
 	\section[Data Dignity]{Data Dignity \cite{LanierWeylBlueprint}}
 	\startsection
@@ -378,6 +378,11 @@
 		This idea is much more systemic and future oriented than the introduction of privacy regulations in respect to not being able to prevent even more innovative privacy regulations by directly involving individuals in this topic so they realize the benefits of reasonable limitations on what efforts are demanded of them, fair compensation for what information they reveal about themselves among other abilities. Weyl and Lanier abstractly call this "the right to be left alone".
 	\closesection
 	
+	\chapter{Limitations}
+	argumentation limitated by our own opinions, not necessarily clearly right or wrong.
+	no investigation for other laws, that might interfere with gdpr
+	...
+
 	\chapter{Conclusion}
 	
 	\newpage
