--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -378,6 +378,12 @@
 		This idea is much more systemic and future oriented than the introduction of privacy regulations in respect to not being able to prevent even more innovative privacy regulations by directly involving individuals in this topic so they realize the benefits of reasonable limitations on what efforts are demanded of them, fair compensation for what information they reveal about themselves among other abilities. Weyl and Lanier abstractly call this "the right to be left alone".
 	\closesection
 	
+	\chapter{Limitations}
+	This work has two main limitations:
+	Firstly, this is not a topic with a clear right or wrong, thus depending on personal opinions and views, one might get to slightly different conclusions and argumentations.
+	Secondly, this work only considers the GDPR, but no other laws and regulations.
+	However there might well be other legal documents that have influence on the presented crowd-sourcing methods, which is therefor not discussed in this paper.
+	
 	\chapter{Conclusion}
 	
 	\newpage
