--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -40,8 +40,6 @@
 	\end{abstract}
 
 	\tableofcontents
-
-	%\nocite{*}
 	
 	\chapter{Introduction}
 	
@@ -59,16 +57,25 @@
 	\startsection
 		This work tries to investigate how GDPR influences crowd-sourcing approaches in the context of Human Smart Cities.
 		Therefor first a literature review on existing crowd-sourcing methods is given:\\\\
-		\textbf{RQ1: What methods do exist in order to gather information from citizen?}\\\\
+		\textbf{RQ1: What methods do exist in order to gather information from citizen?}\label{RQ1}\\\\
 		Then we investigate how these methods do (not) comply with GDPR and derive aspects to be considered when designing crowd-sourcing methods:\\\\
-		\textbf{RQ2: What aspects do Human Smart Cities need to consider in order to comply with GDPR?}\\\\
+		\textbf{RQ2: What aspects do Human Smart Cities need to consider in order to comply with GDPR?}\label{RQ2}\\\\
 	\closesection
 	
 	
 	\chapter{Methodology}
+	\startsection
+		This work was created, following the Design Science Research principles\footnote{\url{https://www.researchgate.net/publication/201169029_A_Design_Science_Research_Methodology_for_Information_Systems_Research} (Is this the correct paper?)}.
+		Therefor we first review the General Data Protection Regulation and summarized our findings in Chapter \ref{GDPR}.
+		Next, we perform a literature review of a sample-set of contemporary crowd-sourcing method and present them in Chapter \ref{Crowd-Sourcing Methods}.
+		Said chapter answers our first research question \ref{RQ1} %@Marcel, how do i link to the exact question, not the section? This should show the label RQ1 or similar.
+		Then we investigate if and how the presented crowd-sourcing methods comply with the GDPR and design the Design Science Research Artifact: A set of design principles and guidlines for designing crowd-sourcing methods in Chapter \ref{Results}. %@Marcel describe here exactly what you did.
+		Finally we perfom a descriptive artifact evaluation, to validate our design principles and guidlines in the same Chapter.
+		This answers our second research question \ref{RQ2} %@Marcel, how do i link to the exact question, not the section? This should show the label RQ2 or similar.
+	\closesection
 
 
-	\chapter{General Data Protection Regulation} \chaptermark{GDPR}
+	\chapter{General Data Protection Regulation} \chaptermark{GDPR} \label{GDPR}
 	The General Data Protection Regulation, referred to as GDPR, is in effect across the European Union since May 25, 2018.
 	The Regulation is directly applicable to processing of personal data in the European Union and data collected from its data subjects.
 	One central aspect of the regulation is that it inludes a significant escalation in potential penalties (up to 4\% of the global revenue).
@@ -183,7 +190,7 @@
 	\closesection
 	
 	
-	\chapter{Crowd-Sourcing Methods}
+	\chapter{Crowd-Sourcing Methods} \label{Crowd-Sourcing Methods}
 	Before concerns regarding privacy of crowd-sourcing methods can be addressed, it is imperative to list a subset of the options that are in use today.
 	
 	\section[Amsterdam]{Amsterdam \cite{SmartCityAmsterdam}} \label{Amsterdam}
@@ -321,7 +328,7 @@
 
 
 	%\chapter{Considerations in Designing Crowd-Sourcing Methods}
-	\chapter{Results}
+	\chapter{Results} \label{Results}
 	In the following chapter the currently used crowd-sourcing methods are evaluated and possible design principles and guidelines are introduced.
 	
 	\section{Today's Crowd-Sourcing Methods and GDPR} \label{juxtaposition}
@@ -379,10 +386,12 @@
 	\closesection
 	
 	\chapter{Limitations}
-	This work has two main limitations:
-	Firstly, this is not a topic with a clear right or wrong, thus depending on personal opinions and views, one might get to slightly different conclusions and argumentations.
-	Secondly, this work only considers the GDPR, but no other laws and regulations.
-	However there might well be other legal documents that have influence on the presented crowd-sourcing methods, which is therefor not discussed in this paper.
+	\startsection
+		This work has two main limitations:
+		Firstly, this is not a topic with a clear right or wrong, thus depending on personal opinions and views, one might get to slightly different conclusions and argumentations.
+		Secondly, this work only considers the GDPR, but no other laws and regulations.
+		However there might well be other legal documents that have influence on the presented crowd-sourcing methods, which is therefor not discussed in this paper.
+	\closesection
 	
 	\chapter{Conclusion}
 	
