Small grammar corrections for limitations and methodology.

--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -66,11 +66,11 @@
 	\chapter{Methodology}
 	\startsection
 		This work was created, following the Design Science Research principles\footnote{\url{https://www.researchgate.net/publication/201169029_A_Design_Science_Research_Methodology_for_Information_Systems_Research} (Is this the correct paper?)}.
-		Therefor we first review the General Data Protection Regulation and summarized our findings in Chapter \ref{GDPR}.
-		Next, we perform a literature review of a sample-set of contemporary crowd-sourcing method and present them in Chapter \ref{Crowd-Sourcing Methods}.
+		Therefore we first review the General Data Protection Regulation and summarized our findings in Chapter \ref{GDPR}.
+		Next, we perform a literature review of a sample-set of contemporary crowd-sourcing methods and present them in Chapter \ref{Crowd-Sourcing Methods}.
 		Said chapter answers our first research question \ref{RQ1} %@Marcel, how do i link to the exact question, not the section? This should show the label RQ1 or similar.
-		Then we investigate if and how the presented crowd-sourcing methods comply with the GDPR and design the Design Science Research Artifact: A set of design principles and guidlines for designing crowd-sourcing methods in Chapter \ref{Results}. %@Marcel describe here exactly what you did.
-		Finally we perfom a descriptive artifact evaluation, to validate our design principles and guidlines in the same Chapter.
+		Then we investigate if and how the presented crowd-sourcing methods comply with the GDPR and design the Design Science Research Artifact: A set of design principles and guidelines for designing crowd-sourcing methods in Chapter \ref{Results}. %@Marcel describe here exactly what you did.
+		Finally, we perfom a descriptive artifact evaluation, to validate our design principles and guidelines in the same Chapter.
 		This answers our second research question \ref{RQ2} %@Marcel, how do i link to the exact question, not the section? This should show the label RQ2 or similar.
 	\closesection
 
@@ -387,10 +387,10 @@
 	
 	\chapter{Limitations}
 	\startsection
-		This work has two main limitations:
+		This work has two major limitations:
 		Firstly, this is not a topic with a clear right or wrong, thus depending on personal opinions and views, one might get to slightly different conclusions and argumentations.
 		Secondly, this work only considers the GDPR, but no other laws and regulations.
-		However there might well be other legal documents that have influence on the presented crowd-sourcing methods, which is therefor not discussed in this paper.
+		However, there might well be other legal documents that influence the presented crowd-sourcing methods, which is therefore not discussed in this paper.
 	\closesection
 	
 	\chapter{Conclusion}
